--- a/mysite/app/templates/delete.html
+++ b/mysite/app/templates/delete.html
@@ -7,17 +7,13 @@
 <body>
 
 <div class="main">
-    <form method="POST">
+    <form action="{% url 'delete' weather.city %}" method="post" style="display:inline;">
         {% csrf_token %}
-        Are you want to delete this item ?
-        <input type="submit" value="Yes" />
-        <a href="/">Cancel </a>
+        <button type="submit" class="btn btn-danger">Delete</button>
     </form>
 </div>
 
 </body>
 </html>
-
-
 
 
