--- a/mysite/app/templates/weather.html
+++ b/mysite/app/templates/weather.html
@@ -2,7 +2,7 @@
     {% for weather in weather_data %}
         <div class="weather-result">
             <div class="icon-container">
-                <form action="{% url 'delete_item' weather.city %}" method="post" style="display:inline;">
+                <form action="{% url 'delete' weather.city %}" method="post" style="display:inline;">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Delete</button>
                     
