--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -11,12 +11,16 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/style.css' %}">
     <!-- the favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon/favicon.png' %}" >
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}
+                    <!-- <span class="delete-message">×</span> -->
+                </li>
             {% endfor %}
         </ul>
     {% endif %}
@@ -42,6 +46,15 @@
 
 
 
+    
+<script>
+    $(document).ready(function() {
+        // messages timeout for 3 seconds
+        setTimeout(function() {
+            $('.messages').fadeOut('slow');
+        }, 3000); // <-- time in milliseconds, 3000 = 3 seconds
+    });
+</script>
 
 </body>
 </html>
