--- a/mysite/static/app/css/style.css
+++ b/mysite/static/app/css/style.css
@@ -3,6 +3,7 @@ body {
     background-color: #f2f2f2;
     text-align: center;
     padding: 50px;
+    position: relative; /* Add this */
 }
 
 form {
@@ -16,7 +17,7 @@ input[type="text"] {
 }
 
 form button {
-    background-color: #4CAF50;
+    background-color: #777e77;
     color: white;
     padding: 5px 10px;
     border: none;
@@ -25,16 +26,13 @@ form button {
 }
 
 .container {
-    /* background-color: #fff; */
-    /* width: 350px;
-    height: 400px; */
-    /* border: 2px solid black; */
     border-radius: 10px;
     position: relative;
     margin: 0 auto; /* Center the container */
 }
 
 
+/* the weather items */
 .weather-results {
     margin-top: 20px;
 }
@@ -55,38 +53,59 @@ form button {
     margin: 10px auto;
 }
 
-
-
-
-/* 
-.city-container {
-    width: 150%;
-    height: 10%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+/* Messages */
+.messages {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+    position: absolute; /* Change to absolute */
+    top: 10px; /* Adjust as needed */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 350px; /* Adjust width as needed */
+    z-index: 1000; /* Ensure it is above other elements */
 }
 
-.button-container {
-    position: absolute;
-    top: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 10px;
-}
-
-.button-container button {
-    background-color: #dc3545;
-    color: white;
-    border: none;
+.messages li {
+    padding: 10px;
+    margin-bottom: 10px;
     border-radius: 5px;
-    cursor: pointer;
-    padding: 5px 10px;
+    position: relative;
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
 }
 
-.eye-icon img {
-    width: 20px; 
-    height: 20px; 
-} */
+.messages li.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border: 1px solid #bee5eb;
+}
+
+.messages li.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.messages li.warning {
+    background-color: #fff3cd;
+    color: #856404;
+    border: 1px solid #ffeeba;
+}
+
+.messages li.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+.messages .del-msg {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-weight: bold;
+    color: #721c24;
+}
