--- a/mysite/app/templates/delete.html
+++ b/mysite/app/templates/delete.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Delete {{ city|title }}</title>
+    
 </head>
 <body>
-
-<div class="main">
-    <form action="{% url 'delete' weather.city %}" method="post" style="display:inline;">
+<div class="confirmation">
+    <h2>Are you sure you want to delete {{ city }}?</h2>
+    <form action="" method="post" style="display:inline;">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Delete</button>
+        <!-- <a href="{% url 'delete' city %}">Delete</a> -->
+        <button type="submit" class="btn btn-danger">Confirm</button>
     </form>
+    <a href="{% url 'index' %}" class="btn btn-secondary">Cancel</a>
 </div>
 
 </body>
