--- a/mysite/app/templates/weather.html
+++ b/mysite/app/templates/weather.html
@@ -1,20 +1,20 @@
+
+
 {% if weather_data %}
-    {% for weather in weather_data %}
-        <div class="weather-result">
-            <div class="icon-container">
-                <form action="{% url 'delete' weather.city %}" method="post" style="display:inline;">
-                    {% csrf_token %}
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                    
-                </form>
-                <li class="eye-icon" style="width: 40px; height: 40px;">
-                    see more
-                </li>
-            </div>
-            <h2>{{ weather.city }}</h2>
-            <p>Temperature: {{ weather.temperature }}°C</p>
-            <p>Description: {{ weather.description }}</p>
-            <img src="http://openweathermap.org/img/wn/{{ weather.icon }}.png" alt="Weather icon">
-        </div>
-    {% endfor %}
+ {% for weather in weather_data %}
+     <div class="weather-result">
+         <div class="icon-container">
+             <a class="btn btn-danger" href="{% url 'delete' weather.city %}">Delete</a>
+             <li class="eye-icon" style="width: 40px; height: 40px;">
+                 see more
+             </li>
+         </div>
+         <h2>{{ weather.city }}</h2>
+         <p>Temperature: {{ weather.temperature }}°C</p>
+         <p>Description: {{ weather.description }}</p>
+         <img src="http://openweathermap.org/img/wn/{{ weather.icon }}.png" alt="Weather icon">
+     </div>
+ {% endfor %}
 {% endif %}
+
+
