--- a/mysite/app/templates/see_more.html
+++ b/mysite/app/templates/see_more.html
@@ -1,15 +1,34 @@
 <h4>see more page</h4>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ city |title }} 
+    </title>
+</head>
+<body>
+    {% if weather_data %}
+            <div class="weather-result">
+                <h1>Weather Details for {{ weather_data.city }}</h1>
+                <p>Country: {{ weather_data.country }}</p>
+                <p>Temperature: {{ weather_data.temperature }}°C</p>
+                <p>Feels Like: {{ weather_data.feels_like }}°C</p>
+                <p>Min Temperature: {{ weather_data.temp_min }}°C</p>
+                <p>Max Temperature: {{ weather_data.temp_max }}°C</p>
+                <p>Visibility: {{ weather_data.visibility }} km</p>
+                <p>Pressure: {{ weather_data.pressure }} hPa</p>
+                <p>Humidity: {{ weather_data.humidity }}%</p>
+                <p>Wind Speed: {{ weather_data.wind_speed }} m/s</p>
+                <p>Wind Direction: {{ weather_data.wind_deg }}°</p>
+                <p>Description: {{ weather_data.description }}</p>
+                <img src="http://openweathermap.org/img/wn/{{ weather_data.icon }}.png" alt="{{ weather_data.description }}">
+            </div>
+        
+    {% endif %}
+    
+</body>
+</html>
 
 
-
-{% if weather_data %}
- {% for weather in weather_data %}
-     <div class="weather-result">
-         <h2>{{ weather.city |title }}</h2>
-         <p>Temperature: {{ weather.temperature }}°C</p>
-         <p>Description: {{ weather.description }}</p>
-         <img src="http://openweathermap.org/img/wn/{{ weather.icon }}.png" alt="Weather icon">
-     </div>
- {% endfor %}
-{% endif %}
