--- a/mysite/app/templates/delete.html
+++ b/mysite/app/templates/delete.html
@@ -5,19 +5,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete {{ city|title }}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'app/css/delete_style.css' %}">
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'app/css/delete_style.css' %}"> -->
 </head>
 <body>
     <div class="confirmation-container">
         <h2>Are you sure you want to delete {{ city }}?</h2>
         <form action="" method="post" style="display:inline;">
             {% csrf_token %}
-            <!-- <a href="{% url 'delete' city %}">Delete</a> -->
             <button type="submit" class="btn btn-danger">Confirm</button>
         </form>
         <a href="{% url 'index' %}" class="btn btn-secondary">Cancel</a>
     </div>
-
+    
+    
+    
+    
 </body>
 </html>
 
