--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -26,6 +26,14 @@
 
     
     
+
+    <div class="clock">
+        <span id="hrs">00</span>
+        <span>:</span>
+        <span id="min">00</span>
+        <span>:</span>
+        <span id="sec">00</span>
+    </div>
     <form method="POST" class="form">
         {% csrf_token %}
         
@@ -34,10 +42,12 @@
         <button type="submit" value="Submit" name="current-location">get current weather</button>
     </form>
 
-    
+    <div>
+    </div>
 
     <div class="container">
         <div class="city-container">
+            
             {% if weather_data %}
                     <div class="weather-results">
                         {% include 'weather.html' with weather_data=weather_data %}
@@ -48,17 +58,32 @@
     </div>
 
 
-
-
+    <script>
+        $(document).ready(function() {
+            // messages timeout for 3 seconds
+            setTimeout(function() {
+                $('.messages').fadeOut('slow');
+            }, 3000); // <-- time in milliseconds, 3000 = 3 seconds
+        });
     
-<script>
-    $(document).ready(function() {
-        // messages timeout for 3 seconds
-        setTimeout(function() {
-            $('.messages').fadeOut('slow');
-        }, 3000); // <-- time in milliseconds, 3000 = 3 seconds
-    });
-</script>
-
+        function formatTime(value) {
+            return value < 10 ? '0' + value : value;
+        }
+    
+        let hrs = document.getElementById('hrs');
+        let min = document.getElementById('min');
+        let sec = document.getElementById('sec');
+    
+        function updateTime() {
+            let currentTime = new Date();
+            hrs.innerHTML = formatTime(currentTime.getHours());
+            min.innerHTML = formatTime(currentTime.getMinutes());
+            sec.innerHTML = formatTime(currentTime.getSeconds());
+        }
+    
+        setInterval(updateTime, 1000);
+        updateTime(); // initial call to display the time immediately
+    </script>
+    
 </body>
 </html>
