--- a/mysite/app/templates/see_more.html
+++ b/mysite/app/templates/see_more.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ city |title }}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/see_more.css'%}"></link>
+    <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon/favicon.png' %}" >
+
 </head>
 <body>
     {% if weather_data %}
