--- a/mysite/app/templates/weather.html
+++ b/mysite/app/templates/weather.html
@@ -1,8 +1,9 @@
 {% if weather_data %}
     {% for weather in weather_data %}
-        <div class="weather-result">
+        <div class="weather-results">
             <div class="icon-container">
-                <a class="eye-icon" href="{% url 'see_more' weather.city %}"><button>see more</button></a>
+                <button onclick= window.location.href="{% url  'see_more' weather.city %}" class="btn btn-secondary">See More</button>
+                <!-- <a class="eye-icon" href="{% url 'see_more' weather.city %}"><button>see more</button></a> -->
                 <button id="delete-button-{{ weather.city }}" class="button-danger">Delete</button>
             </div>
             <h2>{{ weather.city | title }}</h2>
@@ -40,6 +41,7 @@
     margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
+    border-radius: 15px; 
     width: 80%; 
     width: 350px;
     height: 150px;
@@ -57,6 +59,7 @@
     color: black;
     text-decoration: none;
     cursor: pointer;
+    
 }
 </style>
 
@@ -76,8 +79,8 @@ document.addEventListener("DOMContentLoaded", function() {
                 <form action="{% url 'delete' weather.city %}" method="post" style="display:inline;">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Confirm</button>
+                    <button type="button" onclick="window.location.href='{% url 'index' %}'" class="btn btn-secondary">Cancel</button>
                 </form>
-                <a href="{% url 'index' %}" class="btn btn-secondary">Cancel</a>
             `;
             // Display the modal
             modal.style.display = 'block';});
