--- a/mysite/static/app/css/style.css
+++ b/mysite/static/app/css/style.css
@@ -34,35 +34,48 @@ form button {
     border-radius: 10px;
     position: relative;
     margin: 0 auto; /* Center the container */
+    width: 450px;
+    height: 300px;
     
 }
 
-/* the icons */
 .icon-container{
-    margin: 5px;
+    margin:5px;
+    display: flex;
+    gap: 40px;
+    
 }
+.icon-container button{
+    height: 25px;
+    width: 300px;
+}
+
+/* the icons */
+/* .icon-container{
+    margin: 5px;
+} */
 
 
 /* the weather items */
-.icon-container {
+/* .icon-container {
     display: flex;
-    gap: 15px; /* Adjust the gap as needed */
-    align-items: center; /* Aligns items vertically */
-}
+    gap: 80px; /* Adjust the gap as needed *
+    align-items: center; /* Aligns items vertically *
+} */
 
-.weather-result {
+.weather-results {
     background-color: white;
     border: 1px solid #f3ecec;
     padding: 10px;
     margin-bottom: 10px;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 
-.weather-result h2 {
+.weather-results h2 {
     margin-top: 0;
 }
 
-.weather-result img {
+.weather-results img {
     display: block;
     margin: 10px auto;
 }
@@ -122,4 +135,21 @@ form button {
     cursor: pointer;
     font-weight: bold;
     color: #721c24;
+}
+
+
+
+.custom-button {
+    background-color: #8f978f;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none; /* Ensure no underline */
+    display: inline-block; /* Ensures the anchor is displayed like a button */
+}
+
+.custom-button:hover {
+    background-color: #7d887d; /* Optional: Darker shade for hover effect */
 }
