--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -12,6 +12,7 @@
     <!-- the favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon/favicon.png' %}" >
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js" integrity="sha256-7NQm0bhvDJKosL8d+6ZgSi2LxZCIcA/TD087GLEBO9M=" crossorigin="anonymous"></script>
 </head>
 <body>
     {% if messages %}
