--- a/mysite/app/templates/weather.html
+++ b/mysite/app/templates/weather.html
@@ -3,14 +3,7 @@
         <div class="weather-results">
             <div class="icon-container">
                 <button onclick= window.location.href="{% url  'see_more' weather.city %}" class="btn btn-secondary">See More</button>
-                <p id="local-time"></p>
-                <!-- <div class="clock">
-                    <span id="hrs-{{ weather.city }}">00</span><span>:</span><span id="min-{{ weather.city }}">00</span> <span id="period-{{ weather.city }}">AM</span>
-                </div> -->
-                <!-- <div class="clock">
-                    <span id="hrs">00</span><span>:</span><span id="min">00</span>
-                </div> -->
-                <!-- <a class="eye-icon" href="{% url 'see_more' weather.city %}"><button>see more</button></a> -->
+                <p id="local-time-{{ weather.city }}"></p>
                 <button id="delete-button-{{ weather.city }}" class="button-danger">Delete</button>
             </div>
             <h2>{{ weather.city | title }}</h2>
@@ -68,6 +61,24 @@
     cursor: pointer;
     
 }
+
+.icon-container {
+display: flex;
+align-items: center;
+justify-content: space-between; /* Adjusts the spacing between items */
+gap: 10px; /* Adds space between elements */
+
+}
+.icon-container button {
+    width: 100px; /* Set a fixed width for the buttons */
+    margin: 0;
+}
+
+.icon-container button {
+    margin: 0;
+}
+
+
 </style>
 
 <!-- <script id="weather-data" type="application/json">
@@ -140,6 +151,9 @@
             const zone = offsetInHours > 0 ? `UTC+${offsetInHours}` : `UTC${offsetInHours}`;
 
             const localTime = DateTime.utc().setZone(zone).toFormat('yyyy-MM-dd HH:mm');
+
+            // Set the local time for each city
+            document.getElementById(`local-time-${city}`).textContent = localTime;
 
             console.log("City:", city);
             console.log(`Local time for ${city}:`, localTime);
