cleaned the code

--- a/mysite/app/templates/see_more.html
+++ b/mysite/app/templates/see_more.html
@@ -20,7 +20,7 @@
                 <div class="weather-result">
                     <h1>{{ weather_data.city }}, {{ weather_data.country }}</h1>
                     <img src="http://openweathermap.org/img/wn/{{ weather_data.icon }}.png" alt="{{ weather_data.description }}">
-                    <h3>Tem:  {{ weather_data.temperature }}°C</h3>
+                    <h3>Temperature:  {{ weather_data.temperature }}°C</h3>
                     <p>Feels Like: {{ weather_data.feels_like }}°C</p>
                     <p>Min Temperature: {{ weather_data.temp_min }}°C</p>
                     <p>Max Temperature: {{ weather_data.temp_max }}°C</p>
