--- a/mysite/static/app/css/see_more.css
+++ b/mysite/static/app/css/see_more.css
@@ -1,9 +1,9 @@
 body{
-    background-color: aqua;
+    background-color: #b4a0a0;
 }
 
 .weather-container{
-    background-color: rgb(188, 188, 204);
+    background-color: rgb(250, 250, 253);
     height: 600px;
     width: 400px;
     text-align: center;
