--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <!-- Bootstrap icons-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/style.css' %}">
     <!-- the favicon -->
@@ -38,6 +39,11 @@
         
         <input class="" type="text" name="user_data" placeholder="Search City" aria-label="Search">
         <button type="submit" value="Submit">submit</button> 
+
+        <button type="button" class="hover-button" >
+            <i class="fa-solid fa-location-dot"></i>
+        </button>
+        <div class="hover-text">get weather of current location</div>
         <button type="submit" value="Submit" name="current-location">get current weather</button>
     </form>
 
