--- a/mysite/static/app/css/style.css
+++ b/mysite/static/app/css/style.css
@@ -67,6 +67,7 @@ form button {
     margin: 10px auto;
 }
 
+
 /* Messages */
 .messages {
     list-style-type: none;
@@ -139,4 +140,37 @@ form button {
 
 .custom-button:hover {
     background-color: #7d887d; /* Optional: Darker shade for hover effect */
+}
+
+
+
+
+
+
+
+
+
+.hover-button {
+    position: relative; /* Ensure the button is positioned relative */
+    padding: 10px 20px;
+    font-size: 10px;
+    cursor: pointer;
+}
+
+.hover-text {
+    display: none; /* Hide the text initially */
+    position: absolute;
+    bottom: 60px; /* Position it above the button */
+    left: 50%; /* Center it horizontally */
+    transform: translateX(-50%); /* Center the text */
+    background-color: #f0f0f0;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    z-index: 1;
+    white-space: nowrap; /* Prevent text from wrapping */
+}
+
+.hover-button:hover + .hover-text {
+    display: block; /* Show the text on hover */
 }
