fixing the templates structure

--- a/mysite/app/templates/see_more.html
+++ b/mysite/app/templates/see_more.html
@@ -1,15 +1,9 @@
-<!-- <h4>see more page</h4> -->
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ city |title }}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'app/css/see_more.css'%}"></link>
-    <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon/favicon.png' %}" >
+{% extends "base.html" %}
 
-</head>
+{% block title %}{{ weather_data.city }}{% endblock %}
+
+{% block content %}
+
 <body>
     {% if weather_data %}
             <div class="weather-container">
@@ -37,7 +31,6 @@
         
     {% endif %}
     
-</body>
-</html>
+{% endblock %}
 
 
