--- a/mysite/static/app/css/see_more.css
+++ b/mysite/static/app/css/see_more.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     background-color: #b4a0a0;
 }
 
@@ -9,4 +9,4 @@ body{
     text-align: center;
     border-radius: 5px;
     margin: 50px auto;
-}
+} */
