--- a/mysite/app/templates/index.html
+++ b/mysite/app/templates/index.html
@@ -1,32 +1,9 @@
-{% load static %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-    <!-- Bootstrap icons-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/css/style.css' %}">
-    <!-- the favicon -->
-    <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon/favicon.png' %}" >
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js" integrity="sha256-7NQm0bhvDJKosL8d+6ZgSi2LxZCIcA/TD087GLEBO9M=" crossorigin="anonymous"></script>
-</head>
-<body>
-    {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}
-                </li>
-            {% endfor %}
-        </ul>
-    {% endif %}
 
-    
-    
+{% block title %}Weather App{% endblock %}
+
+{% block content %}
 
     <div class="clock">
         <span id="hrs">00</span>
@@ -83,5 +60,5 @@
         setInterval(updateTime, 1000);
         updateTime(); // initial call to display the time immediately
     </script>
-</body>
-</html>
+
+{% endblock %}
