--- a/mysite/app/templates/weather.html
+++ b/mysite/app/templates/weather.html
@@ -14,7 +14,7 @@
     {% endfor %}
 {% endif %}
 
-<!-- Modal container -->
+
 <div id="delete-modal" class="modal" style="display:none;">
     <div class="modal-content">
         <span class="close-button">&times;</span>
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<!-- <style>
+<style>
 .modal {
     display: none; 
     position: fixed; 
@@ -76,7 +76,7 @@ gap: 10px; /* Adds space between elements */
 
 .icon-container button {
     margin: 0;
-} -->
+}
 
 
 </style>
