--- a/mysite/app/templates/base.html
+++ b/mysite/app/templates/base.html
@@ -9,15 +9,18 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- css path -->
-    <link rel="stylesheet" type="text/css" href="{% static 'app/css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'app/css/base.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/see_more.css'%}"></link>
     <!-- the favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'app/favicon/favicon.png' %}" >
 
-    <!-- js -->
+    <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js" integrity="sha256-7NQm0bhvDJKosL8d+6ZgSi2LxZCIcA/TD087GLEBO9M=" crossorigin="anonymous"></script>
     
+    <!-- External JS file -->
+    <script type="text/javascript" src="{% static 'app/js/scripts.js' %}"></script>
+
 </head>
 <body>
     {% block content %}
@@ -29,6 +32,9 @@
                 {% endfor %}
             </ul>
         {% endif %}
+
+
+        
     {% endblock %}
 </body>
 </html>
