--- a/mysite/app/templates/base.html
+++ b/mysite/app/templates/base.html
@@ -25,15 +25,13 @@
 <body>
     {% block content %}
         <!-- Messages -->
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-
-
+        <!-- <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                    {{ message }}
+                </li>
+            {% endfor %}
+        </ul> -->
         
     {% endblock %}
 </body>
