--- a/mysite/static/app/css/base.css
+++ b/mysite/static/app/css/base.css
@@ -7,7 +7,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
     margin-top: 10vw;
 }
 
@@ -26,3 +26,20 @@ body{
     display: none;
 
 }
+
+
+.messages {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.messages li {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    color: white;
+    background-color: rgb(248, 142, 4);
+}
+
+
